CNY currency added